selfhost/test/typechecker/import/error_imported_value_type_mismatch.out
Error at %FILE_NAME%:3:16
Type mismatch
  |  val _: Int[] = a
                    ^
Expected: Int[]
but instead found: Int
