selfhost/test/typechecker/import/error_imported_value_type_mismatch.abra
import a from "./_exports"

val _: Int[] = a
